--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,11 @@ body {
     text-wrap: balance;
   }
 }
+
+canvas {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
