--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,13 +33,13 @@ body {
   }
 }
 
-canvas {
+/* canvas {
   position: absolute;
   height: 100%;
   width: 100%;
   top: 0;
   left: 0;
-}
+} */
 
 @font-face {
   font-family: 'Mark OT Cond Bold Italic';
